[FIX] 지원하지 않는 MVCC 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:/Users/devbok/dev/jpashop;MVCC=true
+    url: jdbc:h2:/Users/devbok/dev/jpashop;
     username: sa
     password:
     driver-class-name: org.h2.Driver
