--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,4 +14,5 @@ spring:
         format_sql: true
 logging:
   level:
-    org.hibernate.sql: debug
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
