--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,9 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
-    org.hibernate.orm.jdbc.bind: trace
+    #org.hibernate.orm.jdbc.bind: trace
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
